--- a/project.css
+++ b/project.css
@@ -30,7 +30,7 @@
 
 body {
     font-family: var(--font);
-    background: black;
+    background: dimgray;
 }
 
 header {
@@ -54,7 +54,7 @@ header .navbar {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #87ceeb;
+    background-color: ghostwhite;
     padding: 0 3rem; 
 }
 
@@ -89,7 +89,7 @@ header .navbar {
 }
 
 .nav-menu li:hover {
-    border-bottom: 2px solid var(--primary-col);
+    border-bottom:  2px solid #767676;;
     color: var(--primary-color);
 }
 
@@ -213,18 +213,31 @@ header .banner {
     display: flex;
     justify-content: center;
     margin-top: 2rem;
+    background-color: dimgray;
+    padding: 2rem 0;
+    color: white;
 }
+
 .service-sec .row{
     width: 80%;
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
     grid-gap: 4px;
 }
+
+.service-sec .card {
+    background-color: darkslategray; 
+}
+
+.service-sec .card-body {
+    background: #e0e0e0;
+    color: black;
+}
 .service-sec .row .card{
     width: 250px;
     margin-top: 2rem;
     transition: .5s;
-    background: var(--primary-color);
+    background: black;
 }
 .service-sec .row:hover .card{transform: scale(0.7);filter: blur(5px);}
 .service-sec .row .card:hover{
@@ -237,7 +250,7 @@ header .banner {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: var(--primary-color);
+    background: black;
 }
 .service-sec .row .card .icon i{
     color: white;
@@ -251,9 +264,32 @@ header .banner {
     text-align: center;
     padding: .5rem;
 }
+
+.card-body .btn {
+    font-family: var(--font);
+    background-color: black;
+    color: white;
+    border: 2px solid white;
+    padding: 0.5rem 1.5rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 14px;
+    border-radius: 25px;
+    transition: all 0.3s ease-in-out;
+    margin-top: 1rem;
+    display: inline-block;
+}
+
+.card-body .btn:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+}
+
 .card-body h3{
     margin-top: 1rem;
-    color: var(--primary-color);
+    color: black;
 }
 .card-body p{
     opacity: .6;
@@ -451,15 +487,20 @@ display: flex;justify-content: center;
 }
 
 .study-resources {
-    background-color: #111;
+    background-color: dimgray;
     color: whitesmoke;
     padding: 4rem 2rem;
 }
 
+.study-resources h1 {
+    color: black !important;
+}
 
-.text-muted {
-    --bs-text-opacity: 1;
-    color: whitesmoke !important;
+
+.study-resources p.text-muted {
+    color: black !important;  
+    font-size: 15px;
+    margin-bottom: 2rem;
 }
 
 .study-resources .resource-box {
