--- a/project.css
+++ b/project.css
@@ -34,7 +34,7 @@ body {
 }
 
 header {
-    
+    padding-bottom: 2rem;
     border-bottom: 2px solid #767676;
 }
 
@@ -50,16 +50,13 @@ header {
 }
 
 header .navbar {
-    position: fixed;
-    top: 0;
-    z-index: 1000;
     height: 80px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: ghostwhite;
     padding: 0 3rem; 
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
 }
 
 .navbar .btn {
