--- a/project.css
+++ b/project.css
@@ -1,6 +1,4 @@
-[11:18 PM, 5/15/2025] Sakshi: css bhejo
-[11:18 PM, 5/15/2025] Sakshi: or html bhi old vala
-[11:18 PM, 5/15/2025] Pooja Saini: *{
+ *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
